# Agent-Development

./: .gitignore  Makefile  README.md  agent_breeding_enhancement_plan.md  extract_local_o1.sh
local_o1_agents/: AGENT_BREEDING_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  README_advanced_orchestration.md  README_dashboard.md  README_distillation.md  README_executor_integration.md  README_multimodal.md  README_vector_memory.md  basic_test.py  enhanced_autonomous_ecosystem.py  example_breeding_system.py  example_integration.py  full_test.py  pyproject.toml  requirements.txt  requirements_minimal.txt  revolutionary_agent_system.py  simple_test.py  test_revolutionary_system.py
local_o1_agents/agents/: adaptive_specialization_system.py  advanced_safety.py  agent_bullpen.py  agent_dna.py  agent_genome.py  agents.py  agents_fixed.py  agents_fixed_complete.py  emergent_behavior_detector.py  enhanced_agents.py  enhanced_factory.py  evolution_system.py  import sys.py  master_agent_factory.py  mentorship_system.py  multi_generational_learning.py  prompts.py  self_aware_agent.py  swarm_intelligence.py
local_o1_agents/config/: config.py
local_o1_agents/dashboard/: ui_dashboard.py  ui_dashboard_config.json
local_o1_agents/dataset/: README.md  executor_distillation_train.json  executor_distillation_val.json  load_executor_distillation.py  stats.json
local_o1_agents/memory/: vector_memory.py
local_o1_agents/models/: benchmark_executor.py  distill_config.json  distill_executor.py  parameter_search.py  validate_executor_quality.py
local_o1_agents/orchestration/: orchestrator.py  (+4 more)
(+13 files in other folders)
